--- a/wisdom/production_release_drops/July_Week5/karthik_wisdom_admin_v04/wisdom_admin_interface/appl_wisdom_admin_interface/templates/wai_base.html
+++ b/wisdom/production_release_drops/July_Week5/karthik_wisdom_admin_v04/wisdom_admin_interface/appl_wisdom_admin_interface/templates/wai_base.html
@@ -227,7 +227,7 @@
 			
 			$("#ddlheadvenu").on('change',function(e){
 				venid = $('#ddlheadvenu option:selected').val();
-				if((cliid * 1) > 0 )
+				if((venid * 1) > 0 )
 				{
 					var myKeyVals = { venueid: venid, csrfmiddlewaretoken:'{{csrf_token}}'  }
 					$.ajax({
