--- a/wisdom/production_release_drops/July_Week5/karthik_wisdom_admin_v04/wisdom_admin_interface/appl_wisdom_admin_interface/templates/wai_mngsplroles.html
+++ b/wisdom/production_release_drops/July_Week5/karthik_wisdom_admin_v04/wisdom_admin_interface/appl_wisdom_admin_interface/templates/wai_mngsplroles.html
@@ -28,7 +28,7 @@
 {% block ddlclient %}
 	<select id="ddlheadclie" name="ddlheadclie" class="form-control">    
 	{% for cd in clidet %}
-    	{% if request.session.clientid == cd.pk_client %}
+    	{% if request.session.clientid|add:"0" == cd.pk_client|add:"0" %} 
 	   	<option value="{{ cd.pk_client }}" selected="selected">{{ cd.client_name }}</option>
         {% else %}
         <option value="{{ cd.pk_client }}">{{ cd.client_name }}</option>
@@ -39,7 +39,7 @@
 {% block ddlvenue %}
 	<select id="ddlheadvenu" name="ddlheadvenu" class="form-control">    
 	{% for vn in vendet %}
-    	{% if request.session.venueid == vn.pk_venue %}
+    	{% if request.session.venueid|add:"0" == vn.pk_venue|add:"0" %}
 	   	<option value="{{ vn.pk_venue }}" selected="selected">{{ vn.venue_name }}</option>
         {% else %}
         <option value="{{ vn.pk_venue }}">{{ vn.venue_name }}</option>
